# weatherbox

./: WeatherBox.f3d
backend/: .gitignore  README.md  poetry.toml  pyproject.toml
backend/src/weatherbox/: i2c.py  main.py  scheduler.py  timelapse.py
backend/src/weatherbox/models/: AS7341.py  BME688.py  LTR390.py
backend/src/weatherbox/sensors/as3935/: as3935.py
backend/src/weatherbox/sensors/ltr390/: ltr390.py
backend/src/weatherbox/sensors/sps30/: sps30.py
backend/tests/: conftest.py  test_capture.py  test_database.py
backend/tests/camera/: test_arducam.py
backend/tests/sensors/: test_as7341.py  test_bme688.py  test_ens160.py  test_ltr390.py  test_sps30.py
backend/tests/sensors/as7341/: test_as7341.py
backend/tests/sensors/bme688/: test_bme688.py
backend/tests/sensors/ens160/: test_ens160.py
backend/tests/sensors/ltr390/: test_ltr390.py
backend/tests/sensors/sps30/: test_sps30.py
backend/tests/weatherbox/: test_capture.py  test_database.py
backend/weatherbox/: db.py  i2c_manager.py  main.py  models.py  routes.py  scheduler.py  sensor_manager.py  stream.py  timelapse.py
backend/weatherbox/camera/: arducam.py  stream.py
backend/weatherbox/models/: AS3935.py  ENS160.py  SPS30.py  TimelapseImage.py
backend/weatherbox/routes/: images.py  sensors.py
backend/weatherbox/sensors/: Sensor.py  __init__.py  as3935.py  as7341.py  bme688.py  ens160.py  i2c.py  i2c_manager.py  ltr390.py  sps30.py
backend/weatherbox/sensors/as7341/: as7341.py
backend/weatherbox/sensors/bme688/: bme688.py
backend/weatherbox/sensors/ens160/: ens160.py
backend/weatherbox/sensors/ltr390/: ltr390.py
client/: index.html  package-lock.json  package.json
client/src/: App.css  App.tsx  hooks.ts  hooks.tsx  index.css  main.tsx  useData.tsx  util.ts
(+10 files in other folders)
