[project]
name = "weatherbox"
version = "0.1.0"
description = ""
authors = [
    { name = "Jordan Schneidler", email = "jordan.schneidler@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
    "sqlmodel (>=0.0.24,<0.0.25)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "adafruit-circuitpython-bme680 (>=3.7.12,<4.0.0)",
    "adafruit-circuitpython-ltr390 (>=1.1.20,<2.0.0)",
    "adafruit-circuitpython-ens160 (>=1.0.11,<2.0.0)",
    "adafruit-circuitpython-as7341 (>=1.2.22,<2.0.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.scripts]
start = "weatherbox.main:start_server"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
